--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-    <a class="navbar-brand" href="#"><img src="ded.jpg" width="100"> </a>
+    <a class="navbar-brand" href="#"><img src="ing/ded.jpg" width="55"> </a>
 
 <ul class="navbar-nav">
     <li class="nav-item"><a href="#" class="nav-link active">Home</a></li>
