--- a/index.html
+++ b/index.html
@@ -1,40 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mustile</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesneet" href="style.css">
 </head>
 
 <body>
-    
 
 
 
 
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-    <a class="navbar-brand" href="#"><img src="ing/ded.jpg" width="55"> </a>
 
-<ul class="navbar-nav">
-    <li class="nav-item"><a href="#" class="nav-link active">Home</a></li>
-    <li class="nav-item"><a href="#" class="nav-link">Repositori</a></li>
-    <li class="nav-item"><a href="#" class="nav-link">Google</a></li>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <a class="navbar-brand" href="#"><img src="ing/ded.jpg" width="55"> </a>
 
-    <li class="nav-item dropdown">
-    <a href="#"  class="nav-link dropdown-toggle" id="toggle" rolr="button" data-toggle="dropdown" 
-    aria-haspopup="true" aria-expanded="false">Games</a>
-    <div class="dropdown-menu" aria-labelledby="toggler">
-        <a href="#" class="dropdown-item">Dota 2</a>
-        <a href="#" class="dropdown-item">Minecraft</a>
-        <a href="#" class="dropdown-item">Brawlhalla</a>
+        <ul class="navbar-nav">
+            <li class="nav-item"><a href="#" class="nav-link active">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Repositori</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Google</a></li>
+
+            <li class="nav-item dropdown">
+                <a href="#" class="nav-link dropdown-toggle" id="toggle" rolr="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">Games</a>
+                <div class="dropdown-menu" aria-labelledby="toggler">
+                    <a href="#" class="dropdown-item">Dota 2</a>
+                    <a href="#" class="dropdown-item">Minecraft</a>
+                    <a href="#" class="dropdown-item">Brawlhalla</a>
+                </div>
+            </li>
+        </ul>
+    </nav>
+
+
+
+    <!-- Карусель
+      .carousel [ТИП: .slide/ (.fade)] {<div>} - ОбЪявляет карусель на сайте 
+           %Пресеты%
+           #{НАЗВАНИЕ_КАРУСЕЛИ} - ДЛЯ ОПРЕДЕЛЕНИЯ КАРУСЕЛИ НА САЙТЕ 
+           data-ride="carousek"
+           {внутренность  .carousel}
+           .carousel-inner {<div>} - Обозначение принадлежности к карусели 
+                .carousel-item {<div>} - Элемент карусели
+                    %пресеты%
+                    .active - элемент который показывается в данный момент
+                    data-interval ={мс} - время задержки на элементе
+-->
+    <div class="container-md d-flex justify-content-center"> 
+        <div class="carousel slide" id="banner" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-interval="1500">
+                    <img class="d-block w-100"
+                        src="https://s2.best-wallpaper.net/wallpaper/1366x768/1705/Funny-cat-hat-horns_1366x768.jpg">
+                    <div class="carousel-caption d-none d-md-block ">
+                        <h4>Это кот или Олень?</h4>
+                        <p>Ответ: это кот !!!!</p>
+                    </div>
+                </div>
+                <div class="carousel-item" data-interval="1500">
+                    <img class="d-block w-100"
+                        src="https://www.tomswallpapers.com/pic/201707/1366x768/tomswallpapers.com-112151.jpg">
+                    <div class="carousel-caption d-none d-md-block ">
+                        <h4>что он там увидел</h4>
+                    </div>
+                </div>
+                <div class="carousel-item" data-interval="1500">
+                    <img class="d-block w-100"
+                        src="https://i01.fotocdn.net/s119/ed52066e84fffa2d/gallery_xl/2721163603.jpg">
+                    <div class="carousel-caption d-none d-md-block ">
+                        <h4>ну где там мой китикет</h4>
+                        <p>ты же его купил!!!</p>
+                    </div>
+
+                </div>
+            </div>
+
+            <a href="#banner" class="carousel-control-next" role="button" data-slide="next">
+                <span class="carousel-control-next-icon d-none d-md-inline-block"></span>
+            </a>
+            <a href="#banner" class="carousel-control-prev" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon d-none d-md-inline-block "></span>
+            </a>
+            
+        </div>
+
     </div>
-</li>
-</ul>
-</nav>
-
-
 
 
 
@@ -43,8 +97,15 @@
 
 
     <script src="script.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
