--- a/index.html
+++ b/index.html
@@ -55,25 +55,25 @@
             <div class="carousel-inner">
                 <div class="carousel-item active" data-interval="1500">
                     <img class="d-block w-100"
-                        src="https://s2.best-wallpaper.net/wallpaper/1366x768/1705/Funny-cat-hat-horns_1366x768.jpg">
+                        src="https://dota2hq.eu/_ph/1/314247452.jpg">
                     <div class="carousel-caption d-none d-md-block ">
-                        <h4>Это кот или Олень?</h4>
-                        <p>Ответ: это кот !!!!</p>
+                        <h4>два друга</h4>
+                        <p></p>
                     </div>
                 </div>
                 <div class="carousel-item" data-interval="1500">
                     <img class="d-block w-100"
-                        src="https://www.tomswallpapers.com/pic/201707/1366x768/tomswallpapers.com-112151.jpg">
+                        src="https://s1.1zoom.me/b5050/661/DOTA_2_Magical_animals_435139_1366x768.jpg">
                     <div class="carousel-caption d-none d-md-block ">
-                        <h4>что он там увидел</h4>
+                        <h4>курьер</h4>
                     </div>
                 </div>
                 <div class="carousel-item" data-interval="1500">
                     <img class="d-block w-100"
-                        src="https://i01.fotocdn.net/s119/ed52066e84fffa2d/gallery_xl/2721163603.jpg">
+                        src="https://2.bp.blogspot.com/-gXMFzK2nMBs/V3t4bBnWnWI/AAAAAAAAAIA/5bhQoaCB8vodJXYhl1ZlPEP5gTPPOgF9QCLcB/s1600/1436413774_e1jD3nvX.jpg">
                     <div class="carousel-caption d-none d-md-block ">
-                        <h4>ну где там мой китикет</h4>
-                        <p>ты же его купил!!!</p>
+                        <h4></h4>
+                        <p></p>
                     </div>
 
                 </div>
